# UbuntuCore

snap-demo/gles2-wayland/: README.md  snapcraft.yaml
snap-demo/gles2-wayland/src/: configure.ac
snap-demo/gles2-wayland/src/src/: Makefile.am  gles2.cpp  utils.cpp  utils.h
snap-demo/glmark2-example/: snapcraft.yaml
snap-demo/hello-snap/: README.md  snapcraft.yaml
snap-demo/hello-snap/src/: configure.ac
snap-demo/hello-snap/src/src/: Makefile.am  main.c
src/: README.md
